packages/isar_generator/test/errors/property/enum_double_type.dart
// unsupported enum property type

import 'package:isar/isar.dart';

@collection
class Model {
  Id? id;

  @Enumerated(EnumType.value, 'value')
  late MyEnum field;
}

enum MyEnum {
  optionA;

  final double value = 5.5;
}
